# acquisition_plotting

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/acquisition_plotting/: __init__.py  make_gif.py  plot_bo_metrics.py  plot_evaluations.py  plot_objective.py  plot_overlaid_corner.py  trieste.py  utils.py
src/acquisition_plotting/kl_distance/: bilby_kl_computer.py  kl_distance.py
src/acquisition_plotting/space/: space.py  transformers.py
tests/: conftest.py  test_kl_distance.py  test_plot_overlaid_corner.py  test_plotting.py
